--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.ddl-auto=validate
 spring.liquibase.url=jdbc:postgresql://localhost:5432/notification
 spring.liquibase.user=test
 spring.liquibase.password=test
-liquibase.change-log=changelogs/changelog-master.xml
+spring.liquibase.change-log=changelogs/changelog-master.xml
 
